--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,7 @@ text-transform: uppercase;
     position: relative;
     /* display: block; */
     /* margin: 0 0 80px 0; */
+    margin: 160px 0 80px 0;
     border: 3px solid white;
     padding: 70px;
 }
@@ -310,16 +311,19 @@ color: #ffffff;
     flex-direction: row;
     justify-content: space-evenly;
     text-align: center;
+    
 }
 
 .product-item {
-    display: block;
+    display: flex;
+    width: 25%;
 }
 
 .product-link {
     display: block;
     text-decoration: none;
     color: #ffffff;
+
 }
 
 .clock_main {
@@ -459,7 +463,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    margin: 61px auto;
     /* width: 20vh;
     height: 8vh; */
     width: 30%;
@@ -475,7 +479,7 @@ button {
     text-transform: uppercase;
      
     color: #ffffff;
-    padding: 12px 28px;
+    /* padding: 12px 28px; */
     background:transparent;
     border: 1px solid #ffffff;
     outline: none;
